# IWCM

./: .gitignore  FINDINGS.md  README.md  REPRODUCTION.md  REPROOF.md  eval.py  pyproject.toml
configs/: default.yaml
configs/exp1/: model_a.yaml  model_b.yaml  model_c.yaml
configs/exp2/: model_a.yaml  model_b.yaml  model_c.yaml  model_d.yaml
experiments/: __init__.py
experiments/analysis/: __init__.py
experiments/exp1_symbolic/: __init__.py
experiments/exp2_video/: __init__.py
paper/: IWCM.tex  references.bib
scripts/: benchmark_microseconds.py  benchmark_speed.py  debug_corruptions.py  dm_control_train.py  evaluate.py  exp1_cross_surface.py  exp1_validate.py  flat_dino.py  flat_energy.py  flat_energy_dino.py  flat_energy_test.py  generate_compositional_grid.py  generate_corruption_train.py  generate_cross_surface_data.py  generate_data.py  pixel_diff.py  pixel_iwcm.py  pixel_spatial.py  pixel_stacked_test.py  pixel_test.py  pixel_train.py  plot_tamg_drift.py  proof_rigorous.py  proof_stress1000.py  proof_visual.py  quick_test.py  reproduction.py  run_experiment.py  run_tamg_5seed.py  run_tamg_5seed_v2.py  stage2_slot_permanence.py  stage2_video_slots.py  tamg_ac3.py  tamg_v4.py  tamg_v5.py  test_tamg_drift.py  train_ac3_curriculum.py  train_distill.py  train_explicit.py  train_long.py  (+8 more)
scripts/bench/: benchmark_microseconds.py  benchmark_speed.py  run_comparison.py  run_stats.py  test_grokking.py
scripts/data/: generate_compositional_grid.py  generate_cross_surface_data.py
src/: __init__.py  pixel_slots.py  tamg_simple.py
tests/: test_smoke.py
(+103 files in other folders)
