[project]
name = "iwcm"
version = "0.1.0"
description = "Implicit Worldline Constraint Models (IWCM) — World Models as Constraint Solvers"
authors = [{name = "IWCM Research Team"}]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-lightning>=2.1.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "transformers>=4.35.0",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
    "pytest>=7.4.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "einops>=0.7.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "imageio>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
